src/snapshots/rust_norg__tests__definitions.snap
---
source: src/lib.rs
expression: examples
---
- - RangeableDetachedModifier:
      modifier_type: Definition
      title:
        - Text: Term
      extensions: []
      content:
        - Paragraph:
            - Token:
                Text: Definition
- - RangeableDetachedModifier:
      modifier_type: Definition
      title:
        - Text: Term
      extensions: []
      content:
        - Paragraph:
            - Token:
                Text: Long
            - Token: Whitespace
            - Token:
                Text: definition
