src/snapshots/rust_norg__tests__headings.snap
---
source: src/lib.rs
expression: examples
---
- - Heading:
      level: 1
      title:
        - Token:
            Text: Heading
      extensions: []
- - Heading:
      level: 9
      title:
        - Token:
            Text: Heading
      extensions: []
- - Heading:
      level: 1
      title:
        - Token:
            Text: Heading
      extensions: []
  - Paragraph:
      - Token:
          Text: content
      - Token:
          Special: "."
- - Heading:
      level: 7
      title:
        - Token:
            Text: Heading
      extensions: []
- - Heading:
      level: 1
      title:
        - Token:
            Text: Heading
      extensions: []
  - Heading:
      level: 1
      title:
        - Token:
            Text: Another
        - Token: Whitespace
        - Token:
            Text: heading
      extensions: []
- - Heading:
      level: 1
      title:
        - Token:
            Text: Heading
      extensions: []
  - Heading:
      level: 2
      title:
        - Token:
            Text: Subheading
      extensions: []
  - Heading:
      level: 1
      title:
        - Token:
            Text: Back
        - Token: Whitespace
        - Token:
            Text: to
        - Token: Whitespace
        - Token:
            Text: regular
        - Token: Whitespace
        - Token:
            Text: heading
      extensions: []
- - Heading:
      level: 1
      title:
        - Token:
            Text: Heading
      extensions: []
  - Paragraph:
      - Token:
          Text: sneaky
      - Token: Whitespace
      - Token:
          Text: content
      - Token:
          Special: "."
  - Heading:
      level: 2
      title:
        - Token:
            Text: Subheading
      extensions: []
  - Paragraph:
      - Token:
          Text: more
      - Token: Whitespace
      - Token:
          Text: sneaky
      - Token: Whitespace
      - Token:
          Text: content
      - Token: Whitespace
      - Token:
          Text: inside
      - Token:
          Special: "."
  - Heading:
      level: 1
      title:
        - Token:
            Text: Back
        - Token: Whitespace
        - Token:
            Text: to
        - Token: Whitespace
        - Token:
            Text: regular
        - Token: Whitespace
        - Token:
            Text: heading
      extensions: []
