src/snapshots/rust_norg__tests__links.snap
---
source: src/lib.rs
expression: examples
---
- - Paragraph:
      - Link:
          filepath: ~
          targets:
            - Url: "https://github.com/nvim-neorg/neorg"
          description: ~
- - Paragraph:
      - Link:
          filepath: ~
          targets:
            - Definition:
                - Token:
                    Text: hello
                - Token:
                    Special: "!"
          description: ~
- - Paragraph:
      - Link:
          filepath: ~
          targets:
            - Path: a-path.txt
          description: ~
- - Paragraph:
      - Link:
          filepath: ~
          targets:
            - Heading:
                level: 9
                title:
                  - Token:
                      Text: hello
                  - Token:
                      Special: "!"
          description: ~
- - Paragraph:
      - Link:
          filepath: /some/file
          targets:
            - Heading:
                level: 3
                title:
                  - Token:
                      Text: a
                  - Token: Whitespace
                  - AttachedModifier:
                      modifier_type: "-"
                      content:
                        - Token:
                            Text: path
                  - Token:
                      Special: "."
                  - Token:
                      Text: txt
          description: ~
- - Paragraph:
      - Anchor:
          content:
            - Token:
                Text: anchor
          description: ~
- - Paragraph:
      - Anchor:
          content:
            - Token:
                Text: anchor
          description:
            - Token:
                Text: description
- - Paragraph:
      - Anchor:
          content:
            - AttachedModifier:
                modifier_type: "*"
                content:
                  - Token:
                      Text: anchored
                  - Token: Whitespace
                  - Token:
                      Text: description
          description: ~
- - Paragraph:
      - AnchorDefinition:
          content:
            - Token:
                Text: description
          target:
            Link:
              filepath: ~
              targets:
                - Heading:
                    level: 1
                    title:
                      - Token:
                          Text: hello
              description: ~
- - Paragraph:
      - Token:
          Text: This
      - Token: Whitespace
      - Token:
          Text: is
      - Token: Whitespace
      - Token:
          Text: a
      - Token: Whitespace
      - InlineLinkTarget:
          - Token:
              Text: link
      - Token:
          Special: "!"
- - Paragraph:
      - InlineLinkTarget:
          - AttachedModifier:
              modifier_type: "*"
              content:
                - Token:
                    Text: linkable
                - Token: Whitespace
                - Token:
                    Text: with
                - Token: Whitespace
                - Token:
                    Text: markup
      - Token: Whitespace
      - Token:
          Text: here
      - Token:
          Special: "!"
- - Paragraph:
      - Link:
          filepath: another_file
          targets: []
          description: ~
